<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.1</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>de.unistuttgart</groupId>
	<artifactId>overworld-backend</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>Overworld Backend</name>
	<description>Backend for the Overworld</description>
	<properties>
		<java.version>17</java.version>
		<org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
		<lombok.version>1.18.24</lombok.version>
		<org.springdoc.version>1.6.9</org.springdoc.version>
		<plugin.prettier.goal>write</plugin.prettier.goal>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-ui</artifactId>
			<version>${org.springdoc.version}</version>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${org.mapstruct.version}</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
			<version>RELEASE</version>
			<scope>compile</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin> 
    			<groupId>org.jacoco</groupId> 
   				<artifactId>jacoco-maven-plugin</artifactId> 
    			<version>0.8.7</version> 
    			<executions> 
        			<execution> 
        				<goals> 
            				<goal>prepare-agent</goal> 
       					 </goals> 
        			</execution> 
        			<execution> 
        				<id>report</id> 
        				<phase>prepare-package</phase> 
       					<goals> 
                			<goal>report</goal> 
        				</goals> 
        			</execution> 
        			<execution> 
        				<id>generate-code-coverage-report</id> 
        				<phase>test</phase> 
        				<goals> 
            				<goal>report</goal> 
       					</goals> 
        			</execution> 
    			</executions> 
			</plugin>

			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.unistuttgart.overworldbackend.OverworldBackendApplication</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
			<plugin>
				<groupId>com.hubspot.maven.plugins</groupId>
				<artifactId>prettier-maven-plugin</artifactId>
				<version>0.16</version>
				<configuration>
					<prettierJavaVersion>1.5.0</prettierJavaVersion>
					<printWidth>120</printWidth>
					<tabWidth>2</tabWidth>
					<useTabs>false</useTabs>
					<ignoreConfigFile>true</ignoreConfigFile>
					<ignoreEditorConfig>true</ignoreEditorConfig>
					<!-- Use <inputGlobs> to override the default input patterns -->
					<inputGlobs>
						<!-- These are the default patterns, you can omit <inputGlobs> entirely unless you want to override them -->
						<inputGlob>src/main/java/**/*.java</inputGlob>
						<inputGlob>src/test/java/**/*.java</inputGlob>
					</inputGlobs>
				</configuration>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>${plugin.prettier.goal}</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
						<path>
							<groupId>org.mapstruct</groupId>
							<artifactId>mapstruct-processor</artifactId>
							<version>${org.mapstruct.version}</version>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
